# tauri-verso-test

./: .gitignore  angular.json  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/app/: app.component.html  app.component.ts  app.routes.ts
src/app/pages/: page.component.ts
src/app/pages/home/: home.component.html
