[package]
name = "tauri-verso-test"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_verso_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tauri-runtime-verso-build = { git = "https://github.com/versotile-org/tauri-runtime-verso.git" }

[dependencies]
tauri = { version = "2", default-features = false, features = ["common-controls-v6", "devtools"] }
tauri-runtime-verso = { git = "https://github.com/versotile-org/tauri-runtime-verso.git" }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

